[package]
name = "rubble-templates-core"
description = "Core traits and structs that are needed for text template evaluation."
version = "0.2.0"
authors = ["multicatch <cezaryre@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/multicatch/rubble-rs"
repository = "https://github.com/multicatch/rubble-rs"
documentation = "https://multicatch.github.io/rubble-rs/rubble_templates_core/"

[features]
default = [ "ast", "evaluator", "compiler" ]
ast = []
evaluator = [ "ast" ]
compiler = [ "evaluator" ]
