[package]
name = "rubble-templates"
description = "A template engine to compile text and evaluate code from template files"
version = "0.1.3"
authors = ["multicatch <cezaryre@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/multicatch/rubble-rs"
repository = "https://github.com/multicatch/rubble-rs"
documentation = "https://multicatch.github.io/rubble-rs/rubble_templates/"
readme = "README.md"
exclude = [
    "test-assets/*"
]

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
rubble-templates-core = { path = "../rubble-templates-core", version = "=0.1.3", features = ["ast", "evaluator", "compiler"] }

[dev-dependencies]
env_logger = { version = "0.8.3" }