[package]
name = "rubble-templates"
description = "A template engine to compile text and evaluate code from template files"
version = "0.2.0"
authors = ["multicatch <cezaryre@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/multicatch/rubble-rs"
repository = "https://github.com/multicatch/rubble-rs"
documentation = "https://multicatch.github.io/rubble-rs/rubble_templates/"
readme = "README.md"
exclude = [
    "test-assets/*",
]

[dependencies]
rubble-templates-core = { path = "../rubble-templates-core", version = "0.2.0", features = ["ast", "evaluator", "compiler"] }
rubble-templates-evaluators = { path = "../rubble-templates-evaluators", version = "0.2.0", features = [ "simple" ] }

[dev-dependencies]
env_logger = { version = "0.8.3" }